--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -237,6 +237,12 @@
         <item name="fontFamily">@font/noto_sans_kr_regular</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.Regular.Red.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+    </style>
 
     <style name="Theme.AppCompat.TextView.Regular.Gray07.Size16" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray07</item>
@@ -404,4 +410,9 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="group_detail_side_sheet_dialog" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
 </resources>
