--- a/android/app/src/main/res/layout/bottom_sheet_group_modify.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_group_modify.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content">
 
                 <FrameLayout
+                    app:myVisibleMenu = "@{vm.detailViewType}"
                     onSingleClick="@{()->vm.selectDelete()}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
@@ -43,6 +44,7 @@
                 </FrameLayout>
 
                 <FrameLayout
+                    app:myVisibleMenu = "@{vm.detailViewType}"
                     onSingleClick="@{()->vm.selectModify()}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
@@ -57,6 +59,7 @@
                 </FrameLayout>
 
                 <FrameLayout
+                    app:userVisibleMenu = "@{vm.detailViewType}"
                     onSingleClick="@{()->vm.selectBlock()}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
@@ -71,6 +74,7 @@
                 </FrameLayout>
 
                 <FrameLayout
+                    app:userVisibleMenu = "@{vm.detailViewType}"
                     onSingleClick="@{()->vm.selectReport()}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
