--- a/android/app/src/main/res/layout/activity_group_detail.xml
+++ b/android/app/src/main/res/layout/activity_group_detail.xml
@@ -33,24 +33,24 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:padding="2dp"
                 onSingleClick="@{()->vm.closeDetail()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:background="@drawable/ripple_circle_white"
+                android:padding="2dp"
                 android:src="@drawable/ic_arrow_left"
                 app:layout_constraintStart_toStartOf="@id/iv_group_detail_poster"
                 app:layout_constraintTop_toTopOf="@id/iv_group_detail_poster"
                 app:tint="@color/white" />
 
             <ImageView
-                android:padding="2dp"
                 onSingleClick="@{()->vm.openMenu()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ripple_circle_white"
                 android:layout_margin="16dp"
+                android:background="@drawable/ripple_circle_white"
+                android:padding="2dp"
                 android:src="@drawable/ic_more_vertical"
                 app:layout_constraintEnd_toEndOf="@id/iv_group_detail_poster"
                 app:layout_constraintTop_toTopOf="@id/iv_group_detail_poster"
@@ -70,7 +70,6 @@
                 android:layout_marginStart="10dp"
                 android:background="@drawable/shape_indicator_active"
                 android:backgroundTint="@color/orange05"
-                android:src="@drawable/ic_dog"
                 app:layout_constraintBottom_toBottomOf="@id/view_group_detail_top_bar"
                 app:layout_constraintStart_toStartOf="@id/view_group_detail_top_bar"
                 app:layout_constraintTop_toTopOf="@id/view_group_detail_top_bar"
@@ -167,16 +166,37 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_group_detail_subject"
                 tools:text="모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다.모임 내용입니다." />
 
-            <TextView
-                android:id="@+id/tv_group_detail_user_list_subject"
-                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:id="@+id/ll_group_detail_user_list"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:gravity="center|start"
                 android:paddingTop="10dp"
-                android:text="@string/group_user_list_subject"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_group_detail_content" />
+                app:layout_constraintTop_toBottomOf="@id/tv_group_detail_content">
+
+                <TextView
+                    style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/group_user_list_subject" />
+
+                <ImageView
+                    android:id="@+id/iv_group_list_user_list_icon"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/ic_user_list" />
+
+                <TextView
+                    style="@style/Theme.AppCompat.TextView.Regular.Black.Size12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="@{@string/group_number_of_people(vm.group.currentNumberOfPeople,vm.group.maximumNumberOfPeople)}"
+                    tools:text="2/4명 참여" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_group_detail_user_list"
@@ -185,7 +205,7 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@id/tv_group_detail_user_list_subject"
+                app:layout_constraintTop_toBottomOf="@id/ll_group_detail_user_list"
                 tools:listitem="@layout/item_detail_profile" />
 
             <TextView
