--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -11,9 +11,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <View
             android:id="@+id/view_group_list_top_bar"
@@ -57,11 +57,23 @@
             app:layout_constraintTop_toTopOf="@id/view_group_list_top_bar" />
 
         <include
+            app:vm = "@{vm}"
             android:id="@+id/include_group_list_filter"
             layout="@layout/include_group_selector"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/view_group_list_top_bar" />
 
+        <ImageButton
+            onSingleClick="@{()->vm.addGroup()}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple_circle_white"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_group_add_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
