--- a/android/app/src/main/res/layout/include_group_selector.xml
+++ b/android/app/src/main/res/layout/include_group_selector.xml
@@ -6,32 +6,26 @@
 
     <data>
         <variable
-            name="participationFilter"
-            type="com.woowacourse.friendogly.presentation.ui.group.model.groupfilter.ParticipationFilter" />
-
-        <variable
             name="groupFilterSelector"
             type="com.woowacourse.friendogly.presentation.ui.group.model.GroupFilterSelector" />
-
         <variable
-            name="actionHandler"
-            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
-
+            name="vm"
+            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="horizontal"
-        android:paddingHorizontal="12dp">
+        android:orientation="horizontal">
 
         <include
+            android:layout_marginStart="12dp"
             android:id="@+id/include_group_list_participation_filter"
             layout="@layout/include_group_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:filterName="@{participationFilter.filterName}"
+            app:filterName="@{vm.participationFilter.filterName}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,13 +50,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:padding="12dp"
             android:id="@+id/rcv_group_list_group"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/include_group_list_participation_filter"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/item_group" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
