style: 발자국 찍기 버튼 ripple 제거

--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -36,9 +36,9 @@
             android:layout_height="80dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/ripple_circle_white"
             android:clickable="true"
             android:focusable="true"
+            android:background="@color/transparent"
             android:onClick="@{() -> vm.markFootPrint()}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_mark_foot_print_btn"
