--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -18,12 +18,11 @@
     <color name="gray02">#F5F5F5</color>
     <color name="gray01">#FAFAFA</color>
 
-    <color name="orange7">#FF821E</color>
-    
     <color name="orange07">#FF821E</color>
     <color name="orange05">#FFB377</color>
     <color name="orange03">#FFCBA1</color>
     <color name="orange01">#FFE8D6</color>
-    
+
     <color name="blue">#8AABFF</color>
+    <color name="map_circle">#1A6568EB</color>
 </resources>
