refactor: orange -> 코랄 색깔 변경

--- a/android/app/src/main/res/drawable/progressbar_linear_progress.xml
+++ b/android/app/src/main/res/drawable/progressbar_linear_progress.xml
@@ -3,14 +3,14 @@
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="6dp" />
-            <solid android:color="@color/gray04" />
+            <solid android:color="@color/gray300" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape>
                 <corners android:radius="6dp" />
-                <solid android:color="@color/orange05" />
+                <solid android:color="@color/coral400" />
             </shape>
         </clip>
     </item>
