--- a/android/app/src/main/res/drawable/rect_orange100_fill_12.xml
+++ b/android/app/src/main/res/drawable/rect_orange100_fill_12.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" />
-    <solid android:color="@color/orange01" />
+    <solid android:color="@color/coral100" />
 </shape>
