--- a/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
@@ -79,7 +79,7 @@
             android:text="@string/group_select_commit"
             onSingleClick="@{()->vm.submitDogs()}"
             style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
-            android:backgroundTint="@color/orange05"
+            android:backgroundTint="@color/coral400"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list" />
