--- a/android/app/src/main/res/layout/item_chat_list.xml
+++ b/android/app/src/main/res/layout/item_chat_list.xml
@@ -31,7 +31,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/RoundSmall"
+            app:shapeAppearanceOverlay="@style/RoundMedium"
             tools:src="@drawable/ic_launcher_background" />
 
         <TextView
