feat: 기본 이미지 적용

--- a/android/app/src/main/res/menu/menu_main_bottom.xml
+++ b/android/app/src/main/res/menu/menu_main_bottom.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/woofFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_dog"
+        android:icon="@drawable/ic_map"
         android:title="@string/bottom_woof" />
 
     <item
