--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
 
     <color name="blue">#8AABFF</color>
     <color name="map_circle">#1A6568EB</color>
+    <color name="lottie_layout">#4DBDBDBD</color>
 </resources>
