--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/line_bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black"
+            android:background="@color/gray02"
             app:layout_constraintBottom_toTopOf="@id/bottom_navi"
             app:layout_constraintTop_toBottomOf="@id/nav_host_fragment_container" />
 
@@ -30,6 +30,7 @@
             android:id="@+id/bottom_navi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:background="@color/white"
             android:clipChildren="false"
             app:elevation="0dp"
