--- a/android/app/src/main/res/layout/fragment_group_add_detail.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_detail.xml
@@ -91,8 +91,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:progressTint="@color/orange05"
-            android:thumbTint="@color/orange05"
+            android:progressTint="@color/coral300"
+            android:thumbTint="@color/coral300"
             android:max="5"
             android:progress="@{vm.groupCounter.count}"/>
     </LinearLayout>
