--- a/android/app/src/main/res/layout/item_group_dog_image.xml
+++ b/android/app/src/main/res/layout/item_group_dog_image.xml
@@ -12,7 +12,7 @@
         glide1000="@{woof.imageUrl}"
         app:shapeAppearanceOverlay="@style/RoundBig"
         android:background="@drawable/shape_indicator_active"
-        android:backgroundTint="@color/orange05"
+        android:backgroundTint="@color/coral300"
         android:layout_width="24dp"
         android:layout_height="24dp"/>
 </layout>
