--- a/android/app/src/main/res/drawable/sel_group_background_filter_menu.xml
+++ b/android/app/src/main/res/drawable/sel_group_background_filter_menu.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/orange03" />
+            <solid android:color="@color/coral100" />
             <corners android:radius="12dp" />
             <stroke
                 android:width="1dp"
