--- a/android/app/src/main/res/layout/activity_group_detail.xml
+++ b/android/app/src/main/res/layout/activity_group_detail.xml
@@ -69,7 +69,7 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
                 android:background="@drawable/shape_indicator_active"
-                android:backgroundTint="@color/orange05"
+                android:backgroundTint="@color/coral300"
                 app:layout_constraintBottom_toBottomOf="@id/view_group_detail_top_bar"
                 app:layout_constraintStart_toStartOf="@id/view_group_detail_top_bar"
                 app:layout_constraintTop_toTopOf="@id/view_group_detail_top_bar"
@@ -127,7 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="6dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/gray04"
+                android:background="@color/gray300"
                 app:layout_constraintTop_toBottomOf="@id/view_group_detail_top_bar" />
 
             <androidx.recyclerview.widget.RecyclerView
