--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -16,29 +16,18 @@
         android:id="@+id/register_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/coral30"
         android:orientation="vertical"
         tools:context=".presentation.ui.register.RegisterActivity">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="200dp"
-            android:src="@drawable/img_dog"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_login_image"
+            app:layout_constraintBottom_toTopOf="@+id/ib_kakao_register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_register_title"
-            style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="@string/register_now"
-            app:layout_constraintBottom_toTopOf="@+id/ib_kakao_register"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
             android:id="@+id/ib_kakao_register"
