refactor: 코랄색 적용

--- a/android/app/src/main/res/layout/fragment_my_page.xml
+++ b/android/app/src/main/res/layout/fragment_my_page.xml
@@ -52,7 +52,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/img_dog"
+                    android:src="@drawable/img_profile_normal"
                     app:glideProfile1000="@{vm.uiState.profilePath}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -136,7 +136,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:background="@drawable/rect_blue_fill_16"
+                        android:background="@drawable/rect_coral400_fill_12"
                         android:gravity="center"
                         android:paddingTop="15dp"
                         android:paddingBottom="15dp"
@@ -176,7 +176,7 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginTop="150dp"
-                        android:src="@drawable/img_dog"
+                        android:src="@drawable/img_profile_normal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
